--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 alembic==1.4.3
 atomicwrites==1.4.0
 attrs==20.2.0
+boto3==1.16.25
+botocore==1.19.25
 cffi==1.14.3
 click==7.1.2
 colorama==0.4.4
@@ -14,6 +16,7 @@ importlib-metadata==2.0.0
 iniconfig==1.1.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
+jmespath==0.10.0
 Mako==1.1.3
 MarkupSafe==1.1.1
 marshmallow==3.8.0
@@ -29,9 +32,11 @@ pytest==6.1.1
 python-dateutil==2.8.1
 python-dotenv==0.14.0
 python-editor==1.0.4
+s3transfer==0.3.3
 six==1.15.0
 SQLAlchemy==1.3.20
 toml==0.10.1
+urllib3==1.26.2
 webargs==6.1.1
 Werkzeug==1.0.1
 zipp==3.4.0
